force-app/main/default/objects/WorkOrder/fields/Cargo_Firmante__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Firmante__c</fullName>
    <label>Cargo del Firmante</label>
    <length>200</length>
    <type>Text</type>
</CustomField>