force-app/main/default/objects/WorkOrder/fields/Fecha_Verificacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Verificacion__c</fullName>
    <label>Fecha de Verificaci&#xF3;n</label>
    <type>DateTime</type>
</CustomField>