force-app/main/default/objects/WorkOrder/fields/GeoPhoto_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>GeoPhoto_Accuracy__c</fullName>
    <label>Precisión GPS (m)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>