force-app/main/default/objects/WorkOrder/fields/GeoPhoto_Count__c.field-meta.xml
<CustomField>
    <fullName>GeoPhoto_Count__c</fullName>
    <label>Fotos tomadas</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>