force-app/main/default/objects/WorkOrder/fields/GeoPhoto_Longitude__c.field-meta.xml
<CustomField>
    <fullName>GeoPhoto_Longitude__c</fullName>
    <label>Longitud Foto</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>