force-app/main/default/objects/WorkOrder/fields/Nombre_Firmante__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Firmante__c</fullName>
    <label>Nombre del Firmante</label>
    <length>200</length>
    <type>Text</type>
</CustomField>