force-app/main/default/objects/WorkOrder/fields/Verificado__c.field-meta.xml
<CustomField>
    <fullName>Verificado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verificado</label>
    <type>Checkbox</type>
</CustomField>