force-app/main/default/objects/WorkOrder/fields/Verificado_Por__c.field-meta.xml
<CustomField>
    <fullName>Verificado_Por__c</fullName>
    <label>Verificado Por</label>
    <length>255</length>
    <type>Text</type>
</CustomField>